@@ -281,8 +281,7 @@ to print the corresponding values, or T for all of them.")
                 (get obj 'system::deftype-expander))
         (format stream (ENGLISH ", names a type"))
         (when (get obj 'system::deftype-expander)
-          (push `(funcall (get ',obj 'system::deftype-expander) '(,obj))
-                moree)))
+          (push `(type-expand ',obj t) moree)))
       (when (get obj 'clos::closclass)
         (format stream (ENGLISH ", names a class")))
       (when (symbol-plist obj)
