@@ -742,7 +742,7 @@ LISPFUNN(class_p,1)
 LISPFUNN(class_of,1)
 LISPFUN(find_class,1,2,norest,nokey,0,NIL)
 LISPFUNN(coerce,2)
-LISPFUNN(expand_deftype,1)
+LISPFUN(expand_deftype,1,1,norest,nokey,0,NIL)
 LISPFUNN(note_new_structure_class,0)
 LISPFUNN(note_new_standard_class,0)
 LISPFUNN(heap_statistics,0)
