@@ -1420,23 +1420,26 @@ referring to circular lists.
 
 ;; ============================================================================
 
-(defun type-expand (typespec)
-  (setq typespec (expand-deftype typespec))
-  (cond ((symbolp typespec)
-         (cond ((or (get typespec 'TYPE-SYMBOL) (get typespec 'TYPE-LIST))
-                typespec)
-               ((or (get typespec 'DEFSTRUCT-DESCRIPTION)
-                    (and (setq f (get typespec 'CLOS::CLOSCLASS))
-                         (clos::class-p f)
-                         (eq (clos:class-name f) typespec)))
-                typespec)
-               (t (typespec-error 'type-expand typespec))))
-        ((and (consp typespec) (symbolp (first typespec)))
-         (case (first typespec)
-           ((SATISFIES MEMBER EQL NOT AND OR) (values typespec nil))
-           (t (cond ((get (first typespec) 'TYPE-LIST) (values typespec nil))
-                    (t (typespec-error 'type-expand typespec))))))
-        ((clos::class-p typespec) (values typespec nil))
-        (t (typespec-error 'type-expand typespec))))
+(defun type-expand (typespec &optional once-p)
+  (multiple-value-bind (expanded user-defined-p)
+      (expand-deftype typespec once-p)
+    (if user-defined-p (values expanded user-defined-p)
+      (cond ((symbolp typespec)
+             (cond ((or (get typespec 'TYPE-SYMBOL) (get typespec 'TYPE-LIST))
+                    (values typespec nil))
+                   ((or (get typespec 'DEFSTRUCT-DESCRIPTION)
+                        (and (setq f (get typespec 'CLOS::CLOSCLASS))
+                             (clos::class-p f)
+                             (eq (clos:class-name f) typespec)))
+                    (values typespec nil))
+                   (t (typespec-error 'type-expand typespec))))
+            ((and (consp typespec) (symbolp (first typespec)))
+             (case (first typespec)
+               ((SATISFIES MEMBER EQL NOT AND OR) (values typespec nil))
+               (t (cond ((get (first typespec) 'TYPE-LIST)
+                         (values typespec nil))
+                        (t (typespec-error 'type-expand typespec))))))
+            ((clos::class-p typespec) (values typespec nil))
+            (t (typespec-error 'type-expand typespec))))))
 
 ;; ============================================================================
